--- a/notebooks/wikipaintings.ipynb
+++ b/notebooks/wikipaintings.ipynb
@@ -30,7 +30,7 @@
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
@@ -41,7 +41,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
@@ -87,54 +87,250 @@
      "collapsed": false,
      "input": [
       "df_d = wikipaintings.get_detailed_dataset()\n",
-      "df_d"
+      "df_d.iloc[:5]"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "html": [
-        "<pre>\n",
-        "&lt;class 'pandas.core.frame.DataFrame'&gt;\n",
-        "Index: 103693 entries, paul-reed_12-1964 to xu-hongming_-1996-2\n",
-        "Data columns (total 11 columns):\n",
-        "image_id        103693  non-null values\n",
-        "artist_slug     103693  non-null values\n",
-        "artwork_slug    103693  non-null values\n",
-        "date            78174  non-null values\n",
-        "genre           101965  non-null values\n",
-        "style           102382  non-null values\n",
-        "technique       41107  non-null values\n",
-        "keywords        59819  non-null values\n",
-        "name            103693  non-null values\n",
-        "page_url        103693  non-null values\n",
-        "image_url       103693  non-null values\n",
-        "dtypes: object(11)\n",
-        "</pre>"
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>image_id</th>\n",
+        "      <th>artist_slug</th>\n",
+        "      <th>artwork_slug</th>\n",
+        "      <th>date</th>\n",
+        "      <th>genre</th>\n",
+        "      <th>style</th>\n",
+        "      <th>technique</th>\n",
+        "      <th>keywords</th>\n",
+        "      <th>name</th>\n",
+        "      <th>page_url</th>\n",
+        "      <th>image_url</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>paul-reed_12-1964</th>\n",
+        "      <td>                     paul-reed_12-1964</td>\n",
+        "      <td>        paul-reed</td>\n",
+        "      <td>                   12-1964</td>\n",
+        "      <td> 1964</td>\n",
+        "      <td>  abstract painting</td>\n",
+        "      <td> Abstract Expressionism</td>\n",
+        "      <td>        NaN</td>\n",
+        "      <td>                                               NaN</td>\n",
+        "      <td>                    #12</td>\n",
+        "      <td> http://www.wikipaintings.org/en/paul-reed/12-1964</td>\n",
+        "      <td> http://uploads5.wikipaintings.org/images/paul-...</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>john-mccracken_10s</th>\n",
+        "      <td>                    john-mccracken_10s</td>\n",
+        "      <td>   john-mccracken</td>\n",
+        "      <td>                       10s</td>\n",
+        "      <td>  NaN</td>\n",
+        "      <td>       installation</td>\n",
+        "      <td>        Light and Space</td>\n",
+        "      <td>        NaN</td>\n",
+        "      <td>                                               NaN</td>\n",
+        "      <td>                    10S</td>\n",
+        "      <td> http://www.wikipaintings.org/en/john-mccracken...</td>\n",
+        "      <td> http://uploads6.wikipaintings.org/images/john-...</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>qian-xuan_-10</th>\n",
+        "      <td>                         qian-xuan_-10</td>\n",
+        "      <td>        qian-xuan</td>\n",
+        "      <td>                       -10</td>\n",
+        "      <td>  NaN</td>\n",
+        "      <td>                NaN</td>\n",
+        "      <td>                    NaN</td>\n",
+        "      <td>        NaN</td>\n",
+        "      <td>                                               NaN</td>\n",
+        "      <td>                    \u6fef\u8db3\u56fe</td>\n",
+        "      <td>     http://www.wikipaintings.org/en/qian-xuan/-10</td>\n",
+        "      <td> http://uploads1.wikipaintings.org/images/qian-...</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>nicholas-roerich_buddha-s-test-1927</th>\n",
+        "      <td>   nicholas-roerich_buddha-s-test-1927</td>\n",
+        "      <td> nicholas-roerich</td>\n",
+        "      <td>        buddha-s-test-1927</td>\n",
+        "      <td> 1927</td>\n",
+        "      <td> religious painting</td>\n",
+        "      <td>              Symbolism</td>\n",
+        "      <td>        NaN</td>\n",
+        "      <td> [seas-and-oceans,  Buddhism,  Tibetian Mytholo...</td>\n",
+        "      <td>                       </td>\n",
+        "      <td> http://www.wikipaintings.org/en/nicholas-roeri...</td>\n",
+        "      <td> http://uploads5.wikipaintings.org/images/nicho...</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>sam-francis_2-impressions-swatch-1992</th>\n",
+        "      <td> sam-francis_2-impressions-swatch-1992</td>\n",
+        "      <td>      sam-francis</td>\n",
+        "      <td> 2-impressions-swatch-1992</td>\n",
+        "      <td> 1992</td>\n",
+        "      <td>  abstract painting</td>\n",
+        "      <td>    Lyrical Abstraction</td>\n",
+        "      <td> lithograph</td>\n",
+        "      <td>                                               NaN</td>\n",
+        "      <td>  2 Impressions: Swatch</td>\n",
+        "      <td> http://www.wikipaintings.org/en/sam-francis/2-...</td>\n",
+        "      <td> http://uploads7.wikipaintings.org/images/sam-f...</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "</div>"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 16,
+       "prompt_number": 30,
        "text": [
-        "<class 'pandas.core.frame.DataFrame'>\n",
-        "Index: 103693 entries, paul-reed_12-1964 to xu-hongming_-1996-2\n",
-        "Data columns (total 11 columns):\n",
-        "image_id        103693  non-null values\n",
-        "artist_slug     103693  non-null values\n",
-        "artwork_slug    103693  non-null values\n",
-        "date            78174  non-null values\n",
-        "genre           101965  non-null values\n",
-        "style           102382  non-null values\n",
-        "technique       41107  non-null values\n",
-        "keywords        59819  non-null values\n",
-        "name            103693  non-null values\n",
-        "page_url        103693  non-null values\n",
-        "image_url       103693  non-null values\n",
-        "dtypes: object(11)"
+        "                                                                    image_id  \\\n",
+        "paul-reed_12-1964                                          paul-reed_12-1964   \n",
+        "john-mccracken_10s                                        john-mccracken_10s   \n",
+        "qian-xuan_-10                                                  qian-xuan_-10   \n",
+        "nicholas-roerich_buddha-s-test-1927      nicholas-roerich_buddha-s-test-1927   \n",
+        "sam-francis_2-impressions-swatch-1992  sam-francis_2-impressions-swatch-1992   \n",
+        "\n",
+        "                                            artist_slug  \\\n",
+        "paul-reed_12-1964                             paul-reed   \n",
+        "john-mccracken_10s                       john-mccracken   \n",
+        "qian-xuan_-10                                 qian-xuan   \n",
+        "nicholas-roerich_buddha-s-test-1927    nicholas-roerich   \n",
+        "sam-francis_2-impressions-swatch-1992       sam-francis   \n",
+        "\n",
+        "                                                    artwork_slug  date  \\\n",
+        "paul-reed_12-1964                                        12-1964  1964   \n",
+        "john-mccracken_10s                                           10s   NaN   \n",
+        "qian-xuan_-10                                                -10   NaN   \n",
+        "nicholas-roerich_buddha-s-test-1927           buddha-s-test-1927  1927   \n",
+        "sam-francis_2-impressions-swatch-1992  2-impressions-swatch-1992  1992   \n",
+        "\n",
+        "                                                    genre  \\\n",
+        "paul-reed_12-1964                       abstract painting   \n",
+        "john-mccracken_10s                           installation   \n",
+        "qian-xuan_-10                                         NaN   \n",
+        "nicholas-roerich_buddha-s-test-1927    religious painting   \n",
+        "sam-francis_2-impressions-swatch-1992   abstract painting   \n",
+        "\n",
+        "                                                        style   technique  \\\n",
+        "paul-reed_12-1964                      Abstract Expressionism         NaN   \n",
+        "john-mccracken_10s                            Light and Space         NaN   \n",
+        "qian-xuan_-10                                             NaN         NaN   \n",
+        "nicholas-roerich_buddha-s-test-1927                 Symbolism         NaN   \n",
+        "sam-francis_2-impressions-swatch-1992     Lyrical Abstraction  lithograph   \n",
+        "\n",
+        "                                                                                keywords  \\\n",
+        "paul-reed_12-1964                                                                    NaN   \n",
+        "john-mccracken_10s                                                                   NaN   \n",
+        "qian-xuan_-10                                                                        NaN   \n",
+        "nicholas-roerich_buddha-s-test-1927    [seas-and-oceans,  Buddhism,  Tibetian Mytholo...   \n",
+        "sam-francis_2-impressions-swatch-1992                                                NaN   \n",
+        "\n",
+        "                                                         name  \\\n",
+        "paul-reed_12-1964                                         #12   \n",
+        "john-mccracken_10s                                        10S   \n",
+        "qian-xuan_-10                                             \u6fef\u8db3\u56fe   \n",
+        "nicholas-roerich_buddha-s-test-1927                             \n",
+        "sam-francis_2-impressions-swatch-1992   2 Impressions: Swatch   \n",
+        "\n",
+        "                                                                                page_url  \\\n",
+        "paul-reed_12-1964                      http://www.wikipaintings.org/en/paul-reed/12-1964   \n",
+        "john-mccracken_10s                     http://www.wikipaintings.org/en/john-mccracken...   \n",
+        "qian-xuan_-10                              http://www.wikipaintings.org/en/qian-xuan/-10   \n",
+        "nicholas-roerich_buddha-s-test-1927    http://www.wikipaintings.org/en/nicholas-roeri...   \n",
+        "sam-francis_2-impressions-swatch-1992  http://www.wikipaintings.org/en/sam-francis/2-...   \n",
+        "\n",
+        "                                                                               image_url  \n",
+        "paul-reed_12-1964                      http://uploads5.wikipaintings.org/images/paul-...  \n",
+        "john-mccracken_10s                     http://uploads6.wikipaintings.org/images/john-...  \n",
+        "qian-xuan_-10                          http://uploads1.wikipaintings.org/images/qian-...  \n",
+        "nicholas-roerich_buddha-s-test-1927    http://uploads5.wikipaintings.org/images/nicho...  \n",
+        "sam-francis_2-impressions-swatch-1992  http://uploads7.wikipaintings.org/images/sam-f...  "
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 30
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "df_style = wikipaintings.get_style_dataset()\n",
+      "df_style.iloc[0]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 32,
+       "text": [
+        "image_id                                                              paul-reed_12-1964\n",
+        "artist_slug                                                                   paul-reed\n",
+        "artwork_slug                                                                    12-1964\n",
+        "date                                                                               1964\n",
+        "genre                                                                 abstract painting\n",
+        "style                                                            Abstract Expressionism\n",
+        "technique                                                                           NaN\n",
+        "keywords                                                                            NaN\n",
+        "name                                                                                #12\n",
+        "page_url                              http://www.wikipaintings.org/en/paul-reed/12-1964\n",
+        "image_url                             http://uploads5.wikipaintings.org/images/paul-...\n",
+        "style_Abstract_Art                                                                False\n",
+        "style_Abstract_Expressionism                                                       True\n",
+        "style_Art_Informel                                                                False\n",
+        "style_Art_Nouveau_(Modern)                                                        False\n",
+        "style_Baroque                                                                     False\n",
+        "style_Color_Field_Painting                                                        False\n",
+        "style_Cubism                                                                      False\n",
+        "style_Early_Renaissance                                                           False\n",
+        "style_Expressionism                                                               False\n",
+        "style_High_Renaissance                                                            False\n",
+        "style_Impressionism                                                               False\n",
+        "style_Magic_Realism                                                               False\n",
+        "style_Mannerism_(Late_Renaissance)                                                False\n",
+        "style_Minimalism                                                                  False\n",
+        "style_Nave_Art_(Primitivism)                                                      False\n",
+        "style_Neoclassicism                                                               False\n",
+        "style_Northern_Renaissance                                                        False\n",
+        "style_Pop_Art                                                                     False\n",
+        "style_Post-Impressionism                                                          False\n",
+        "style_Realism                                                                     False\n",
+        "style_Rococo                                                                      False\n",
+        "style_Romanticism                                                                 False\n",
+        "style_Surrealism                                                                  False\n",
+        "style_Symbolism                                                                   False\n",
+        "style_Ukiyo-e                                                                     False\n",
+        "genre_abstract_painting                                                            True\n",
+        "genre_cityscape                                                                   False\n",
+        "genre_design                                                                      False\n",
+        "genre_figurative_painting                                                         False\n",
+        "genre_flower_painting                                                             False\n",
+        "genre_genre_painting                                                              False\n",
+        "genre_illustration                                                                False\n",
+        "genre_landscape                                                                   False\n",
+        "genre_marina                                                                      False\n",
+        "genre_mythological_painting                                                       False\n",
+        "genre_nude_painting_(nu)                                                          False\n",
+        "genre_portrait                                                                    False\n",
+        "genre_religious_painting                                                          False\n",
+        "genre_self-portrait                                                               False\n",
+        "genre_sketch_and_study                                                            False\n",
+        "genre_still_life                                                                  False\n",
+        "genre_symbolic_painting                                                           False\n",
+        "Name: paul-reed_12-1964, Length: 53, dtype: object"
+       ]
+      }
+     ],
+     "prompt_number": 32
     },
     {
      "cell_type": "markdown",
@@ -223,7 +419,7 @@
       "    ax.set_title('Date Frequency')\n",
       "    ax.set_xlabel('Year')\n",
       "    return fig\n",
-      "\n",
+      "    \n",
       "fig = plot_date_distribution(df_d)"
      ],
      "language": "python",
