updated pascal style results

--- a/notebooks/pascal results.ipynb
+++ b/notebooks/pascal results.ipynb
@@ -38,22 +38,12 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "label_df = vislab.datasets.pascal.get_clf_df()\n",
-      "label_df.columns"
+      "label_df = vislab.datasets.pascal.get_clf_df()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 55,
-       "text": [
-        "Index([u'_height', u'_source', u'_width', u'class_aeroplane', u'class_bicycle', u'class_bird', u'class_boat', u'class_bottle', u'class_bus', u'class_car', u'class_cat', u'class_chair', u'class_cow', u'class_diningtable', u'class_dog', u'class_horse', u'class_motorbike', u'class_person', u'class_pottedplant', u'class_sheep', u'class_sofa', u'class_train', u'class_tvmonitor', u'_split', u'metaclass_animal', u'metaclass_vehicle', u'metaclass_indoor', u'metaclass_person'], dtype='object')"
-       ]
-      }
-     ],
-     "prompt_number": 55
+     "outputs": [],
+     "prompt_number": 67
     },
     {
      "cell_type": "markdown",
