--- a/notebooks/AVA dataset.ipynb
+++ b/notebooks/AVA dataset.ipynb
@@ -18,8 +18,28 @@
      ],
      "language": "python",
      "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "The autoreload extension is already loaded. To reload it, use:\n",
+        "  %reload_ext autoreload\n"
+       ]
+      }
+     ],
+     "prompt_number": 35
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "style_df = vislab.datasets.ava.get_style_df()"
+     ],
+     "language": "python",
+     "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 47
     },
     {
      "cell_type": "code",
@@ -64,66 +84,6 @@
       }
      ],
      "prompt_number": 27
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "style_df = vislab.datasets.ava.get_style_df()\n",
-      "style_df"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "html": [
-        "<pre>\n",
-        "&lt;class 'pandas.core.frame.DataFrame'&gt;\n",
-        "Index: 14079 entries, 615485 to 858130\n",
-        "Data columns (total 14 columns):\n",
-        "Complementary_Colors    14079  non-null values\n",
-        "Duotones                14079  non-null values\n",
-        "HDR                     14079  non-null values\n",
-        "Image_Grain             14079  non-null values\n",
-        "Light_On_White          14079  non-null values\n",
-        "Long_Exposure           14079  non-null values\n",
-        "Macro                   14079  non-null values\n",
-        "Motion_Blur             14079  non-null values\n",
-        "Negative_Image          14079  non-null values\n",
-        "Rule_of_Thirds          14079  non-null values\n",
-        "Shallow_DOF             14079  non-null values\n",
-        "Silhouettes             14079  non-null values\n",
-        "Soft_Focus              14079  non-null values\n",
-        "Vanishing_Point         14079  non-null values\n",
-        "dtypes: bool(14)\n",
-        "</pre>"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 3,
-       "text": [
-        "<class 'pandas.core.frame.DataFrame'>\n",
-        "Index: 14079 entries, 615485 to 858130\n",
-        "Data columns (total 14 columns):\n",
-        "Complementary_Colors    14079  non-null values\n",
-        "Duotones                14079  non-null values\n",
-        "HDR                     14079  non-null values\n",
-        "Image_Grain             14079  non-null values\n",
-        "Light_On_White          14079  non-null values\n",
-        "Long_Exposure           14079  non-null values\n",
-        "Macro                   14079  non-null values\n",
-        "Motion_Blur             14079  non-null values\n",
-        "Negative_Image          14079  non-null values\n",
-        "Rule_of_Thirds          14079  non-null values\n",
-        "Shallow_DOF             14079  non-null values\n",
-        "Silhouettes             14079  non-null values\n",
-        "Soft_Focus              14079  non-null values\n",
-        "Vanishing_Point         14079  non-null values\n",
-        "dtypes: bool(14)"
-       ]
-      }
-     ],
-     "prompt_number": 3
     },
     {
      "cell_type": "code",
