now loading multi class prediction results for metrics

--- a/notebooks/ava style results.ipynb
+++ b/notebooks/ava style results.ipynb
@@ -23,15 +23,57 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "The autoreload extension is already loaded. To reload it, use:\n",
+        "  %reload_ext autoreload\n"
+       ]
+      }
+     ],
+     "prompt_number": 223
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "results_df, preds_panel = aphrodite.results.load_pred_results(\n",
-      "    'ava_style_oct21', '/Users/sergeyk/work/aphrodite/data/results2', force=False)\n",
+      "    'ava_style_oct22', '/Users/sergeyk/work/aphrodite/data/results2', multiclass=True, force=True)\n",
+      "preds_panel"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Results in collection ava_style_oct22: 2\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 242,
+       "text": [
+        "<class 'pandas.core.panel.Panel'>\n",
+        "Dimensions: 31 (items) x 13843 (major_axis) x 2 (minor_axis)\n",
+        "Items axis: importance to style_Vanishing_Point\n",
+        "Major_axis axis: 1187 to 97008\n",
+        "Minor_axis axis: lab_hist  vw to noise  vw"
+       ]
+      }
+     ],
+     "prompt_number": 242
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "results_df, preds_panel = aphrodite.results.load_pred_results(\n",
+      "    'ava_style_oct21', '/Users/sergeyk/work/aphrodite/data/results2', multiclass=False, force=False)\n",
       "preds_panel"
      ],
      "language": "python",
@@ -64,7 +106,7 @@
      "collapsed": false,
      "input": [
       "results_df, preds_panel = aphrodite.results.load_pred_results(\n",
-      "    'ava_style_split_oct17', '/Users/sergeyk/work/aphrodite/data/results2', force=False)\n",
+      "    'ava_style_split_oct17', '/Users/sergeyk/work/aphrodite/data/results2', multiclass=False, force=False)\n",
       "preds_panel"
      ],
      "language": "python",
