--- a/notebooks/wikipaintings dataset.ipynb
+++ b/notebooks/wikipaintings dataset.ipynb
@@ -31,17 +31,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "The autoreload extension is already loaded. To reload it, use:\n",
-        "  %reload_ext autoreload\n"
-       ]
-      }
-     ],
-     "prompt_number": 6
+     "outputs": [],
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -122,7 +113,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 7,
+       "prompt_number": 2,
        "text": [
         "                                                                               artist_slug  \\\n",
         "image_id                                                                                     \n",
@@ -158,7 +149,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -282,7 +273,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 3,
        "text": [
         "                                                                          image_id  \\\n",
         "paul-reed_12-1964                                                paul-reed_12-1964   \n",
@@ -349,7 +340,7 @@
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -362,47 +353,12 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "df_style = vislab.dataset.get_boolean_df(df, 'style', 1000)\n",
-      "df_style.iloc[0]"
+      "df_style = vislab.datasets.wikipaintings.get_style_df(1000)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 9,
-       "text": [
-        "Impressionism                   False\n",
-        "Realism                         False\n",
-        "Romanticism                     False\n",
-        "Post-Impressionism              False\n",
-        "Expressionism                   False\n",
-        "Surrealism                      False\n",
-        "Art_Nouveau_(Modern)            False\n",
-        "Symbolism                       False\n",
-        "Baroque                         False\n",
-        "Neoclassicism                   False\n",
-        "Northern_Renaissance            False\n",
-        "Nave_Art_(Primitivism)          False\n",
-        "Abstract_Expressionism           True\n",
-        "Rococo                          False\n",
-        "Cubism                          False\n",
-        "Early_Renaissance               False\n",
-        "High_Renaissance                False\n",
-        "Minimalism                      False\n",
-        "Color_Field_Painting            False\n",
-        "Mannerism_(Late_Renaissance)    False\n",
-        "Ukiyo-e                         False\n",
-        "Pop_Art                         False\n",
-        "Abstract_Art                    False\n",
-        "Magic_Realism                   False\n",
-        "Art_Informel                    False\n",
-        "Name: paul-reed_12-1964, dtype: bool"
-       ]
-      }
-     ],
-     "prompt_number": 9
+     "outputs": [],
+     "prompt_number": 47
     },
     {
      "cell_type": "markdown",
