--- a/notebooks/flickr results.ipynb
+++ b/notebooks/flickr results.ipynb
@@ -22,17 +22,39 @@
      ],
      "language": "python",
      "metadata": {},
+     "outputs": [],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "label_df.columns = ['style_' + x if x not in ['image_url', 'page_url', '_split'] else x for x in label_df.columns]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "(label_df[vislab.datasets.flickr.underscored_style_names].sum(1) > 1).sum()"
+     ],
+     "language": "python",
+     "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 7,
        "text": [
-        "The autoreload extension is already loaded. To reload it, use:\n",
-        "  %reload_ext autoreload\n"
+        "775"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -49,67 +71,69 @@
         "<pre>\n",
         "&lt;class 'pandas.core.frame.DataFrame'&gt;\n",
         "Index: 50198 entries, f_4114967495 to f_8612611101\n",
-        "Data columns (total 19 columns):\n",
-        "Bright,_Energetic        50198  non-null values\n",
-        "Depth_of_Field           50198  non-null values\n",
-        "Ethereal                 50198  non-null values\n",
-        "Geometric_Composition    50198  non-null values\n",
-        "HDR                      50198  non-null values\n",
-        "Hazy                     50198  non-null values\n",
-        "Horror                   50198  non-null values\n",
-        "Long_Exposure            50198  non-null values\n",
-        "Macro                    50198  non-null values\n",
-        "Melancholy               50198  non-null values\n",
-        "Minimal                  50198  non-null values\n",
-        "Noir                     50198  non-null values\n",
-        "Romantic                 50198  non-null values\n",
-        "Serene                   50198  non-null values\n",
-        "Soft,_Pastel             50198  non-null values\n",
-        "Sunny                    50198  non-null values\n",
-        "Vintage                  50198  non-null values\n",
-        "image_url                50198  non-null values\n",
-        "page_url                 50198  non-null values\n",
-        "dtypes: bool(17), object(2)\n",
+        "Data columns (total 20 columns):\n",
+        "style_Bright,_Energetic        50198  non-null values\n",
+        "style_Depth_of_Field           50198  non-null values\n",
+        "style_Ethereal                 50198  non-null values\n",
+        "style_Geometric_Composition    50198  non-null values\n",
+        "style_HDR                      50198  non-null values\n",
+        "style_Hazy                     50198  non-null values\n",
+        "style_Horror                   50198  non-null values\n",
+        "style_Long_Exposure            50198  non-null values\n",
+        "style_Macro                    50198  non-null values\n",
+        "style_Melancholy               50198  non-null values\n",
+        "style_Minimal                  50198  non-null values\n",
+        "style_Noir                     50198  non-null values\n",
+        "style_Romantic                 50198  non-null values\n",
+        "style_Serene                   50198  non-null values\n",
+        "style_Soft,_Pastel             50198  non-null values\n",
+        "style_Sunny                    50198  non-null values\n",
+        "style_Vintage                  50198  non-null values\n",
+        "image_url                      50198  non-null values\n",
+        "page_url                       50198  non-null values\n",
+        "_split                         50198  non-null values\n",
+        "dtypes: bool(17), object(3)\n",
         "</pre>"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 2,
+       "prompt_number": 8,
        "text": [
         "<class 'pandas.core.frame.DataFrame'>\n",
         "Index: 50198 entries, f_4114967495 to f_8612611101\n",
-        "Data columns (total 19 columns):\n",
-        "Bright,_Energetic        50198  non-null values\n",
-        "Depth_of_Field           50198  non-null values\n",
-        "Ethereal                 50198  non-null values\n",
-        "Geometric_Composition    50198  non-null values\n",
-        "HDR                      50198  non-null values\n",
-        "Hazy                     50198  non-null values\n",
-        "Horror                   50198  non-null values\n",
-        "Long_Exposure            50198  non-null values\n",
-        "Macro                    50198  non-null values\n",
-        "Melancholy               50198  non-null values\n",
-        "Minimal                  50198  non-null values\n",
-        "Noir                     50198  non-null values\n",
-        "Romantic                 50198  non-null values\n",
-        "Serene                   50198  non-null values\n",
-        "Soft,_Pastel             50198  non-null values\n",
-        "Sunny                    50198  non-null values\n",
-        "Vintage                  50198  non-null values\n",
-        "image_url                50198  non-null values\n",
-        "page_url                 50198  non-null values\n",
-        "dtypes: bool(17), object(2)"
+        "Data columns (total 20 columns):\n",
+        "style_Bright,_Energetic        50198  non-null values\n",
+        "style_Depth_of_Field           50198  non-null values\n",
+        "style_Ethereal                 50198  non-null values\n",
+        "style_Geometric_Composition    50198  non-null values\n",
+        "style_HDR                      50198  non-null values\n",
+        "style_Hazy                     50198  non-null values\n",
+        "style_Horror                   50198  non-null values\n",
+        "style_Long_Exposure            50198  non-null values\n",
+        "style_Macro                    50198  non-null values\n",
+        "style_Melancholy               50198  non-null values\n",
+        "style_Minimal                  50198  non-null values\n",
+        "style_Noir                     50198  non-null values\n",
+        "style_Romantic                 50198  non-null values\n",
+        "style_Serene                   50198  non-null values\n",
+        "style_Soft,_Pastel             50198  non-null values\n",
+        "style_Sunny                    50198  non-null values\n",
+        "style_Vintage                  50198  non-null values\n",
+        "image_url                      50198  non-null values\n",
+        "page_url                       50198  non-null values\n",
+        "_split                         50198  non-null values\n",
+        "dtypes: bool(17), object(3)"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "df, preds_panel = aphrodite.results.load_pred_results(\n",
-      "    'aug29', '/Users/sergeyk/work/aphrodite/data/results', force=False)\n",
+      "    'aug29', '/Users/sergeyk/work/ aphrodite/data/results', force=False)\n",
       "pred_prefix = 'clf flickr_style'\n",
       "print preds_panel.minor_axis"
      ],
