hackle fixed a bug in evaluation where some labels had 0 examples

--- a/notebooks/AVA dataset.ipynb
+++ b/notebooks/AVA dataset.ipynb
@@ -18,17 +18,30 @@
      ],
      "language": "python",
      "metadata": {},
+     "outputs": [],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "artist_df = vislab.datasets.ava.get_artists_df()"
+     ],
+     "language": "python",
+     "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "The autoreload extension is already loaded. To reload it, use:\n",
-        "  %reload_ext autoreload\n"
+       "ename": "AttributeError",
+       "evalue": "'module' object has no attribute 'get_artists_df'",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-4-e1d1cd985349>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0martist_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvislab\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatasets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mava\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_artists_df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;31mAttributeError\u001b[0m: 'module' object has no attribute 'get_artists_df'"
        ]
       }
      ],
-     "prompt_number": 35
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
