--- a/notebooks/AVA dataset.ipynb
+++ b/notebooks/AVA dataset.ipynb
@@ -19,7 +19,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -81,7 +81,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 27,
+       "prompt_number": 2,
        "text": [
         "<class 'pandas.core.frame.DataFrame'>\n",
         "Index: 255530 entries, 953619 to 57221\n",
@@ -96,7 +96,7 @@
        ]
       }
      ],
-     "prompt_number": 27
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -133,6 +133,17 @@
       }
      ],
      "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ratings_df = vislab.datasets.ava.get_ratings_df()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 3
     }
    ],
    "metadata": {}
