--- a/notebooks/fine tuning.ipynb
+++ b/notebooks/fine tuning.ipynb
@@ -22,14 +22,6 @@
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "The autoreload extension is already loaded. To reload it, use:\n",
-        "  %reload_ext autoreload\n"
-       ]
-      },
-      {
        "html": [
         "<pre>\n",
         "&lt;class 'pandas.core.frame.DataFrame'&gt;\n",
@@ -43,7 +35,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 154,
+       "prompt_number": 1,
        "text": [
         "<class 'pandas.core.frame.DataFrame'>\n",
         "Index: 79108 entries, f_1918552217 to claude-monet_at-val-saint-nicolas-near-dieppe-morning\n",
@@ -55,7 +47,27 @@
        ]
       }
      ],
-     "prompt_number": 154
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "train_df.label.nunique()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 4,
+       "text": [
+        "42"
+       ]
+      }
+     ],
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
