multi class predict from trained

--- a/notebooks/ava style results.ipynb
+++ b/notebooks/ava style results.ipynb
@@ -683,7 +683,7 @@
      "collapsed": false,
      "input": [
       "results_df, preds_panel = aphrodite.results.load_pred_results(\n",
-      "    'ava_style_oct22', '/Users/sergeyk/work/aphrodite/data/results2',\n",
+      "    'ava_style_oct22', os.path.expanduser('~/work/aphrodite/data/results2'),\n",
       "    multiclass=True, force=True)\n",
       "pred_prefix = 'pred'\n",
       "print preds_panel.minor_axis\n",
