--- a/notebooks/ava_style_aesth_results.ipynb
+++ b/notebooks/ava_style_aesth_results.ipynb
@@ -516,7 +516,7 @@
      "collapsed": false,
      "input": [
       "results_df, preds_panel = aphrodite.results.load_pred_results(\n",
-      "    'ava_style_aesth_oct29', '/Users/sergeyk/work/aphrodite/data/results2', multiclass=False, force=False)\n",
+      "    'ava_style_aesth_oct29', os.path.expanduser('~/work/aphrodite/data/results2'), multiclass=False, force=False)\n",
       "pred_prefix = 'ava_style'\n",
       "print preds_panel.minor_axis\n",
       "preds_panel"
