--- a/notebooks/flickr results.ipynb
+++ b/notebooks/flickr results.ipynb
@@ -175,7 +175,7 @@
      "collapsed": false,
      "input": [
       "df, preds_panel = aphrodite.results.load_pred_results(\n",
-      "    'flickr_oct26', '/Users/sergeyk/work/aphrodite/data/results2', multiclass=True, force=True)\n",
+      "    'flickr_oct26', os.path.expanduser('~/work/aphrodite/data/results2'), multiclass=True, force=True)\n",
       "pred_prefix = 'pred'\n",
       "print preds_panel.minor_axis"
      ],
