content/style notebooks

--- a/notebooks/flickr results.ipynb
+++ b/notebooks/flickr results.ipynb
@@ -82,7 +82,7 @@
         "      <th>0</th>\n",
         "      <td> 526ce38a9622958641aaee52</td>\n",
         "      <td> flickr_style_ALL</td>\n",
-        "      <td>                                      [decaf_fc6]</td>\n",
+        "      <td>                                       [decaf_fc6]</td>\n",
         "      <td> 10525</td>\n",
         "      <td> 29633</td>\n",
         "      <td> 10040</td>\n",
@@ -96,7 +96,7 @@
         "      <th>1</th>\n",
         "      <td> 526cf7179622958641aaee53</td>\n",
         "      <td> flickr_style_ALL</td>\n",
-        "      <td>                                         [mc_bit]</td>\n",
+        "      <td>                                          [mc_bit]</td>\n",
         "      <td> 10525</td>\n",
         "      <td> 29633</td>\n",
         "      <td> 10040</td>\n",
@@ -110,7 +110,7 @@
         "      <th>2</th>\n",
         "      <td> 526da6289622958641aaee54</td>\n",
         "      <td> flickr_style_ALL</td>\n",
-        "      <td>                              [decaf_fc6_flatten]</td>\n",
+        "      <td>                               [decaf_fc6_flatten]</td>\n",
         "      <td> 10525</td>\n",
         "      <td> 29633</td>\n",
         "      <td> 10040</td>\n",
@@ -124,7 +124,7 @@
         "      <th>3</th>\n",
         "      <td> 5271ce419622958641af6844</td>\n",
         "      <td> flickr_style_ALL</td>\n",
-        "      <td>                                [decaf_tuned_fc6]</td>\n",
+        "      <td>                                 [decaf_tuned_fc6]</td>\n",
         "      <td> 10525</td>\n",
         "      <td> 29633</td>\n",
         "      <td> 10040</td>\n",
@@ -138,7 +138,7 @@
         "      <th>4</th>\n",
         "      <td> 527250979622958641af684c</td>\n",
         "      <td> flickr_style_ALL</td>\n",
-        "      <td>                            [fusion_flickr_oct26]</td>\n",
+        "      <td>                             [fusion_flickr_oct26]</td>\n",
         "      <td> 10525</td>\n",
         "      <td> 29633</td>\n",
         "      <td> 10040</td>\n",
@@ -152,7 +152,7 @@
         "      <th>5</th>\n",
         "      <td> 52729fb89622958641af6850</td>\n",
         "      <td> flickr_style_ALL</td>\n",
-        "      <td>                        [decaf_tuned_fc6_flatten]</td>\n",
+        "      <td>                         [decaf_tuned_fc6_flatten]</td>\n",
         "      <td> 10525</td>\n",
         "      <td> 29633</td>\n",
         "      <td> 10040</td>\n",
@@ -166,7 +166,7 @@
         "      <th>6</th>\n",
         "      <td> 5272b5ed9622958641af6851</td>\n",
         "      <td> flickr_style_ALL</td>\n",
-        "      <td> [decaf_tuned_fc6, pascal_mc_for_decaf_tuned_fc6]</td>\n",
+        "      <td>  [decaf_tuned_fc6, pascal_mc_for_decaf_tuned_fc6]</td>\n",
         "      <td> 10525</td>\n",
         "      <td> 29633</td>\n",
         "      <td> 10040</td>\n",
@@ -176,13 +176,27 @@
         "      <td> 0.512261</td>\n",
         "      <td> clf</td>\n",
         "    </tr>\n",
+        "    <tr>\n",
+        "      <th>7</th>\n",
+        "      <td> 52731b769622958641b1a34c</td>\n",
+        "      <td> flickr_style_ALL</td>\n",
+        "      <td> [fusion_flickr_oct26, pascal_mc_for_fusion_fli...</td>\n",
+        "      <td> 10525</td>\n",
+        "      <td> 29633</td>\n",
+        "      <td> 10040</td>\n",
+        "      <td>    fp</td>\n",
+        "      <td> data_flickr_style_ALL_features_['fusion_flickr...</td>\n",
+        "      <td> 0.418336</td>\n",
+        "      <td> 0.624072</td>\n",
+        "      <td> clf</td>\n",
+        "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
         "</div>"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 16,
        "text": [
         "                        _id              data  \\\n",
         "0  526ce38a9622958641aaee52  flickr_style_ALL   \n",
@@ -192,15 +206,17 @@
         "4  527250979622958641af684c  flickr_style_ALL   \n",
         "5  52729fb89622958641af6850  flickr_style_ALL   \n",
         "6  5272b5ed9622958641af6851  flickr_style_ALL   \n",
+        "7  52731b769622958641b1a34c  flickr_style_ALL   \n",
         "\n",
-        "                                           features  num_test  num_train  \\\n",
-        "0                                       [decaf_fc6]     10525      29633   \n",
-        "1                                          [mc_bit]     10525      29633   \n",
-        "2                               [decaf_fc6_flatten]     10525      29633   \n",
-        "3                                 [decaf_tuned_fc6]     10525      29633   \n",
-        "4                             [fusion_flickr_oct26]     10525      29633   \n",
-        "5                         [decaf_tuned_fc6_flatten]     10525      29633   \n",
-        "6  [decaf_tuned_fc6, pascal_mc_for_decaf_tuned_fc6]     10525      29633   \n",
+        "                                            features  num_test  num_train  \\\n",
+        "0                                        [decaf_fc6]     10525      29633   \n",
+        "1                                           [mc_bit]     10525      29633   \n",
+        "2                                [decaf_fc6_flatten]     10525      29633   \n",
+        "3                                  [decaf_tuned_fc6]     10525      29633   \n",
+        "4                              [fusion_flickr_oct26]     10525      29633   \n",
+        "5                          [decaf_tuned_fc6_flatten]     10525      29633   \n",
+        "6   [decaf_tuned_fc6, pascal_mc_for_decaf_tuned_fc6]     10525      29633   \n",
+        "7  [fusion_flickr_oct26, pascal_mc_for_fusion_fli...     10525      29633   \n",
         "\n",
         "   num_val quadratic                                       results_name  \\\n",
         "0    10040     False  data_flickr_style_ALL_features_['decaf_fc6']_n...   \n",
@@ -210,6 +226,7 @@
         "4    10040      None  data_flickr_style_ALL_features_['fusion_flickr...   \n",
         "5    10040     False  data_flickr_style_ALL_features_['decaf_tuned_f...   \n",
         "6    10040        pd  data_flickr_style_ALL_features_['decaf_tuned_f...   \n",
+        "7    10040        fp  data_flickr_style_ALL_features_['fusion_flickr...   \n",
         "\n",
         "   score_test  score_val task  \n",
         "0    0.420880   0.495051  clf  \n",
@@ -218,11 +235,12 @@
         "3    0.413716   0.503487  clf  \n",
         "4    0.418018   0.634308  clf  \n",
         "5    0.350339   0.690889  clf  \n",
-        "6    0.415589   0.512261  clf  "
+        "6    0.415589   0.512261  clf  \n",
+        "7    0.418336   0.624072  clf  "
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -232,7 +250,7 @@
       "    'flickr_oct26', os.path.expanduser('~/work/aphrodite/data/results2'),\n",
       "    multiclass=True, force=True)\n",
       "pred_prefix = 'pred'\n",
-      "print preds_panel2.minor_axis"
+      "print preds_panel.minor_axis"
      ],
      "language": "python",
      "metadata": {},
@@ -241,8 +259,23 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Results in collection flickr_oct26: 7\n",
+        "Results in collection flickr_oct26: 8\n",
         "Index([u'decaf_fc6 False vw', u'decaf_fc6_flatten False vw', u'decaf_tuned_fc6 False vw', u'decaf_tuned_fc6,pascal_mc_for_decaf_tuned_fc6 pd vw', u'decaf_tuned_fc6_flatten False vw', u'fusion_flickr_oct26 None vw', u'mc_bit False vw'], dtype='object')"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Results in collection flickr_oct26: 8\n",
+        "Index([u'decaf_fc6 False vw', u'decaf_fc6_flatten False vw', u'decaf_tuned_fc6 False vw', u'decaf_tuned_fc6,pascal_mc_for_decaf_tuned_fc6 pd vw', u'decaf_tuned_fc6_flatten False vw', u'fusion_flickr_oct26 None vw', u'fusion_flickr_oct26,pascal_mc_for_fusion_flickr_oct26 fp vw', u'mc_bit False vw'], dtype='object')"
        ]
       },
       {
@@ -253,7 +286,7 @@
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
