--- a/notebooks/filter style by pascal.ipynb
+++ b/notebooks/filter style by pascal.ipynb
@@ -20,17 +20,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "The autoreload extension is already loaded. To reload it, use:\n",
-        "  %reload_ext autoreload\n"
-       ]
-      }
-     ],
-     "prompt_number": 17
+     "outputs": [],
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -42,7 +33,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 32
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -199,13 +190,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "flickr_df = vislab.datasets.flickr.load_flickr_df()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 71
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
