--- a/notebooks/wikipaintings dataset.ipynb
+++ b/notebooks/wikipaintings dataset.ipynb
@@ -34,14 +34,22 @@
      "outputs": [
       {
        "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "The autoreload extension is already loaded. To reload it, use:\n",
+        "  %reload_ext autoreload\n"
+       ]
+      },
+      {
+       "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "/Users/sergeyk/anaconda/python.app/Contents/lib/python2.7/site-packages/configobj.py:145: DeprecationWarning: The compiler package is deprecated and removed in Python 3.x.\n",
+        "/Users/sergeyk/anaconda/lib/python2.7/site-packages/configobj.py:145: DeprecationWarning: The compiler package is deprecated and removed in Python 3.x.\n",
         "  import compiler\n"
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -60,6 +68,21 @@
      "language": "python",
      "metadata": {},
      "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "/Users/sergeyk/anaconda/lib/python2.7/site-packages/pandas/core/config.py:570: DeprecationWarning: height has been deprecated.\n",
+        "\n",
+        "  warnings.warn(d.msg, DeprecationWarning)\n",
+        "/Users/sergeyk/anaconda/lib/python2.7/site-packages/pandas/core/config.py:570: DeprecationWarning: height has been deprecated.\n",
+        "\n",
+        "  warnings.warn(d.msg, DeprecationWarning)\n",
+        "/Users/sergeyk/anaconda/lib/python2.7/site-packages/pandas/core/config.py:570: DeprecationWarning: height has been deprecated.\n",
+        "\n",
+        "  warnings.warn(d.msg, DeprecationWarning)\n"
+       ]
+      },
       {
        "html": [
         "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
@@ -122,7 +145,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 2,
+       "prompt_number": 9,
        "text": [
         "                                                                               artist_slug  \\\n",
         "image_id                                                                                     \n",
@@ -158,7 +181,7 @@
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -183,6 +206,21 @@
        "stream": "stdout",
        "text": [
         "(101086, 11)\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "/Users/sergeyk/anaconda/lib/python2.7/site-packages/pandas/core/config.py:570: DeprecationWarning: height has been deprecated.\n",
+        "\n",
+        "  warnings.warn(d.msg, DeprecationWarning)\n",
+        "/Users/sergeyk/anaconda/lib/python2.7/site-packages/pandas/core/config.py:570: DeprecationWarning: height has been deprecated.\n",
+        "\n",
+        "  warnings.warn(d.msg, DeprecationWarning)\n",
+        "/Users/sergeyk/anaconda/lib/python2.7/site-packages/pandas/core/config.py:570: DeprecationWarning: height has been deprecated.\n",
+        "\n",
+        "  warnings.warn(d.msg, DeprecationWarning)\n"
        ]
       },
       {
@@ -282,7 +320,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 2,
+       "prompt_number": 10,
        "text": [
         "                                                                          image_id  \\\n",
         "paul-reed_12-1964                                                paul-reed_12-1964   \n",
@@ -349,7 +387,7 @@
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -367,7 +405,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
